Added text search, includes checking for mispelled words as well as different inflections of the words in the search. Also added a dedicated results view. Some minor spacing changes

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "laravelcollective/html": "^6.2"
+        "laravelcollective/html": "^6.2",
+        "tigitz/php-spellchecker": "^0.3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
